--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for [ @restaurant, @review ] do |f| %>
-  <%= f.input :rating, collection: %w(1 2 3 4 5) %>
+  <%= f.input :rating, collection: 0..5 %>
   <%= f.input :content %>
   <%= f.submit "Submit review", class: "btn btn-danger" %>
 <% end %>
